--- a/Capstone_Project/plants/templates/plants/about.html
+++ b/Capstone_Project/plants/templates/plants/about.html
@@ -3,12 +3,7 @@
 {% block plants %}
 
 <div>
-    <div>
-        <img src="{% static 'plants/images/banner_food_image.jpg' %}" alt="banner">
-        <div>
-            <h3>About Us</h3>
-        </div>
-    </div>
+    <div class="bannerImage">
 </div>
 <div>
     <div>
