--- a/Capstone_Project/plants/templates/plants/base.html
+++ b/Capstone_Project/plants/templates/plants/base.html
@@ -37,8 +37,17 @@
             </nav>
         </div>
     </div>
-    <!-- <footer class="footer">
-
+    <!-- <footer>
+        <div class="copyright">
+          <p>&copy 2021 - GARDEN LIGHT</p>
+        </div>
+        <div class="social">
+            <a href="#" class="support">Contact Us</a>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-youtube"></a>
+            <a href="#" class="fa fa-instagram"></a>
+        </div>
     </footer> -->
     {% block plants %}
     {% endblock %}
