--- a/Capstone_Project/users/templates/users/profile.html
+++ b/Capstone_Project/users/templates/users/profile.html
@@ -26,20 +26,20 @@
             <a href="{% url 'gardenPlot:index' %}">Garden Plot<img src="{% static 'plants/images/garden_plot.png' %}" alt="garden plot"></a>
         </section>
     </div>
-    
+    <hr>
+    <hr>
+    <div class="seed">
+        <h2>Identify Seed & Fruit</h2>
+    </div>
     <div class="plot">    
-        <table class="innerplot">            
-            <tr class="row1">
-                <td><img src="{% static 'users/images/Apple_seeds.jpg' %}" alt="apple seed"></td>
-                <td><img src="{% static 'users/images/beet_seed.jpg' %}" alt="beet seed"></td>
-                <td><img src="{% static 'users/images/broccoli_seed.jpg' %}" alt="broccoli seed"></td>
-            </tr>
-            <tr class="row2">
-                <td><img src="{% static 'users/images/corn_seed.jpeg' %}" alt="corn seed"></td>
-                <td><img src="{% static 'users/images/lettuce_seed.jpg' %}" alt="lettuce seed"></td>
-                <td><img src="{% static 'users/images/collard_seed.jpg' %}" alt="collard"></td>
-            </tr>
-        </table>
+        <div class="innerplot">   
+            <div class="one"></div>
+            <div class="two"></div>
+            <div class="three"></div>
+            <div class="four"></div>
+            <div class="five"></div>
+            <div class="six"></div>
+        </div>
     </div>
     {% endif %} 
 </div>
