--- a/Capstone_Project/plants/templates/plants/index.html
+++ b/Capstone_Project/plants/templates/plants/index.html
@@ -26,20 +26,16 @@
         </section>
     </div>
 
-    <div class="summary">
         <div class="notes">
-            <div>
-                <h1>We've learned over the years that we should know more about our fruits and vegetables.</h1>
-            </div>
-            <div>
-                <h1>Fruits and vegetables are a great source of vitamins and minerals. You won’t find a better nutritional source than fruits and veggies, which are packed with vitamins A, C and E, as well as magnesium, zinc, phosphorous and folic acid.
-            </h1>  
-            </div>
-            <div>
-                <h4><a href="{% url 'plants:aboutPage' %}">ABOUT US</a></h4>
-            </div>
+            <h1>Our fruit and vegetable games and other resources present an exciting way for you  and  your  <br>children to learn about these healthy foods. Fruits and vegetables  are a  great <br> source of vitamins and minerals. You won’t find a better nutritional  source <br> than fruits and veggies, which are packed with vitamins.</h1>
         </div>
-    </div>
+
+    
+        <div class="links">
+            <h3>Click the Link 4 more Info</h3>
+            <a href="{% url 'plants:aboutPage' %}">ABOUT US</a>
+        </div>
+
     
 <!-- </body> -->
 {% endblock %}
