--- a/Capstone_Project/users/static/users/style.css
+++ b/Capstone_Project/users/static/users/style.css
@@ -185,39 +185,200 @@ body{
   overflow: hidden;
 }
 
+hr {
+  border: 5px dotted plum;
+}
+.seed {
+  padding-top: 2em;
+  font-size: 35px;
+  text-align: center;
+}
+
 /* SEED STYLING */
-table{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-}
 
-tr {
-  height: 100%;
+.plot {
   width: 100%;
-  font-size: 1.5em;
-  font-weight: bold;
-  color: black;
-  font-family: 'Balsamiq Sans', cursive;
+  border-radius: 8px;
+  padding: 15px;
+  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
-.row1 > td img, .row2 > td img {
+.innerplot {
+  width: 50%;
+}
+
+.one {
+  background-image: url('../users/images/Apple_seeds.jpg');
+  width: 75%;
+  height: 300px;
   background-repeat: no-repeat; 
-  background-size: 90%, 10%;
+  background-size: 100%, 10%;
   background-position: center;
   text-align: center;
   justify-content: center;
   padding-bottom: 1em;
-  width: 150px;
-  height: 150px;
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
 }
 
-.row1:hover > td, .row2:hover > td {
+.one:hover {
+  background-image: url('../users/images/apple.jpg');
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  width: 75%;
+  height: 300px;
+  padding: 0.5em;
+  background-repeat: no-repeat;
+  background-size: 100%, 10%;
+  background-position: center;
+  cursor: pointer;
+}
+
+.two {
+  background-image: url('../users/images/beet_seed.jpg');
+  width: 75%;
+  height: 300px;
+  background-repeat: no-repeat; 
+  background-size: 100%, 10%;
+  background-position: center;
+  text-align: center;
+  justify-content: center;
+  padding-bottom: 1em;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.two:hover {
+  background-image: url('../users/images/beets.jpg');
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  width: 75%;
+  height: 300px;
+  padding: 0.5em;
+  background-repeat: no-repeat;
+  background-size: 100%, 10%;
+  background-position: center;
+  cursor: pointer;
+}
+
+.three {
+  background-image: url('../users/images/broccoli_seed.jpg');
+  width: 75%;
+  height: 300px;
+  background-repeat: no-repeat; 
+  background-size: 100%, 10%;
+  background-position: center;
+  text-align: center;
+  justify-content: center;
+  padding-bottom: 1em;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.three:hover {
+  background-image: url('../users/images/broccoli.jpg');
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  width: 75%;
+  height: 300px;
+  padding: 0.5em;
+  background-repeat: no-repeat;
+  background-size: 100%, 10%;
+  background-position: center;
+  cursor: pointer;
+}
+
+.four {
+  background-image: url('../users/images/collard_seed.jpg');
+  width: 75%;
+  height: 300px;
+  background-repeat: no-repeat; 
+  background-size: 100%, 10%;
+  background-position: center;
+  text-align: center;
+  justify-content: center;
+  padding-bottom: 1em;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.four:hover {
+  background-image: url('../users/images/collard.jpeg');
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  width: 75%;
+  height: 300px;
+  padding: 0.5em;
+  background-repeat: no-repeat;
+  background-size: 100%, 10%;
+  background-position: center;
+  cursor: pointer;
+}
+
+.five {
+  background-image: url('../users/images/corn_seed.jpeg');
+  width: 75%;
+  height: 300px;
+  background-repeat: no-repeat; 
+  background-size: 100%, 10%;
+  background-position: center;
+  text-align: center;
+  justify-content: center;
+  padding-bottom: 1em;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.five:hover {
+  background-image: url('../users/images/corn.jpg');
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  width: 75%;
+  height: 300px;
+  padding: 0.5em;
+  background-repeat: no-repeat;
+  background-size: 100%, 10%;
+  background-position: center;
+  cursor: pointer;
+}
+
+.six {
+  background-image: url('../users/images/lettuce_seed.jpg');
+  width: 75%;
+  height: 300px;
+  background-repeat: no-repeat; 
+  background-size: 100%, 10%;
+  background-position: center;
+  text-align: center;
+  justify-content: center;
+  padding-bottom: 1em;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.six:hover {
+  background-image: url('../users/images/oakleaf_lettuce.jpg');
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  width: 75%;
+  height: 300px;
+  padding: 0.5em;
   background-repeat: no-repeat;
   background-size: 100%, 10%;
   background-position: center;
@@ -225,7 +386,6 @@ tr {
 }
 
 /* Register Styling */
-
 /* Right side */
 
 form {
