--- a/Capstone_Project/plants/templates/plants/base.html
+++ b/Capstone_Project/plants/templates/plants/base.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+    {% block header %}
     <div class="header" id="myHeader">
         <div class="headerTitle">
             <h1>GARDEN LIGHT</h1>   
@@ -37,6 +38,7 @@
             </nav>
         </div>
     </div>
+    {% endblock %}
     <!-- <footer>
         <div class="copyright">
           <p>&copy 2021 - GARDEN LIGHT</p>
