--- a/Capstone_Project/users/static/users/style.css
+++ b/Capstone_Project/users/static/users/style.css
@@ -6,6 +6,9 @@
   box-sizing: border-box;
   font-family: 'Balsamiq Sans', cursive;
 }
+html, body{
+  min-height: 100%;
+}
 
 /* TOP NAAAAV Styling */
 .stickyTopNav {
@@ -29,7 +32,7 @@ body{
   color: #56523E;
   height: 100vh;
   display: block;
-  height: 100%;
+  /* height: 100%; */
   margin: 0;
   font-family: 'Balsamiq Sans', cursive;
   text-decoration: none;
@@ -448,6 +451,17 @@ form {
   }
 
   /* FOOTER STYLING */
+
+  footer {
+    position: sticky;
+    bottom: 1em;
+    width: 100vw;
+    margin: 2em 0;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 2em;
+  }
+  
   .fa {
     padding: 20px;
     font-size: 30px;
