--- a/Capstone_Project/users/templates/users/base.html
+++ b/Capstone_Project/users/templates/users/base.html
@@ -36,7 +36,20 @@
             </nav>
         </div>
     </div>
+    <!-- <footer>
+        <div class="copyright">
+          <p>&copy 2021 - GARDEN LIGHT</p>
+        </div>
+        <div class="social">
+            <a href="#" class="support">Contact Us</a>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-youtube"></a>
+            <a href="#" class="fa fa-instagram"></a>
+        </div>
+    </footer> -->
     {% block users %}
     {% endblock %}
+    
 </body>
 </html>
