--- a/Capstone_Project/plants/templates/plants/about.html
+++ b/Capstone_Project/plants/templates/plants/about.html
@@ -5,7 +5,7 @@
 <div>
     <div class="bannerImage">
 </div>
-<div>
+<div class="aboutPage1">
     <div>
         <div>
             <h4>Welcome To Good Food</h4>
@@ -39,7 +39,7 @@
             <img src="{% static 'plants/images/leaf_image.png' %}" alt="leaf">
         </div>
     </div>
-</div>
+<!-- </div>
 <div>
     <div>
         <div>
@@ -88,10 +88,10 @@
                 <h3>Healthy Cooking</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
-        </div>
-    </div>
-</div>
-<div>
+        </div> -->
+    <!-- </div>
+</div> -->
+<!-- <div>
     <article>
         <h1>Header {{ message }}</h1>
         <h3>About GoodFood</h3>
@@ -135,6 +135,6 @@
         <p>Finally… Smoothies! If you have a blender, all you need is fruit and ice to whip up a delicious smoothie using all of your favorite flavors. And here’s a tip – when you make a fruit smoothie, feel free to throw in as much fresh spinach as you like. Spinach doesn’t start to taste like “spinach” until you cook it. Even kids can’t tell the difference!</p>
 
         <p>Enjoying fruits and vegetables is a great way to improve your health and actually enjoy what you eat. While it may take a little creativity, effort and an open mind to try new things, switching to a diet with more fruits and veggies is definitely worth it!</p>
-    </article>
+    </article> -->
 </div>
 {% endblock %}
