Styling Changes Made

--- a/Capstone_Project/plants/templates/plants/about.html
+++ b/Capstone_Project/plants/templates/plants/about.html
@@ -1,4 +1,9 @@
 {% extends 'plants/base.html' %}
+
+{% block title %}
+About | Garden Light
+{% endblock %}
+
 {% load static %}
 {% block plants %}
 
