--- a/Capstone_Project/plants/templates/plants/dashboard.html
+++ b/Capstone_Project/plants/templates/plants/dashboard.html
@@ -1,4 +1,9 @@
 {% extends 'plants/base.html' %}
+
+{% block title %}
+Dashboard | Garden Light
+{% endblock %}
+
 {% load static %}
 
 {% block header %}
