--- a/Capstone_Project/plants/templates/plants/index.html
+++ b/Capstone_Project/plants/templates/plants/index.html
@@ -1,4 +1,9 @@
 {% extends 'plants/base.html' %}
+
+{% block title %}
+Garden Light
+{% endblock %}
+
 {% load static %}
 {% block plants %}
 <!-- <body> -->
