--- a/Capstone_Project/users/templates/users/base.html
+++ b/Capstone_Project/users/templates/users/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GoodFood-RealFood</title>
+    <title>{% block title %}{% endblock %}</title>
     <!-- font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <!-- font -->
@@ -25,7 +25,7 @@
 <body>
     <div class="header" id="myHeader">
         <div class="headerTitle">
-            {% block title %}<h1>GARDEN LIGHT</h1>{% endblock %}
+            <h1>GARDEN LIGHT</h1>
         </div>
         <div class="topNav">
             <nav class="navBar">
