--- a/Capstone_Project/users/templates/users/profile.html
+++ b/Capstone_Project/users/templates/users/profile.html
@@ -1,4 +1,9 @@
 {% extends 'users/base.html' %}
+
+{% block title %}
+Member Home | Garden Light
+{% endblock %}
+
 {% load static %}
 {% block users %}
 
