--- a/Capstone_Project/users/templates/users/register.html
+++ b/Capstone_Project/users/templates/users/register.html
@@ -1,5 +1,9 @@
 {% extends 'users/base.html' %}
 
+{% block title %}
+Register | Garden Light
+{% endblock %}
+
 {% block users %}
 <body class="loginregister">
     <div class="message">
